# mina-ralph-loop-bootstrap-python-cli

./: .gitignore  AGENT.md  AGENTS.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/templates/scaffold/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/: __main__.py  config.py
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/application/: task_service.py
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/cli/: app.py
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/domain/: task.py
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/infrastructure/: file_task_store.py  logging.py
assets/templates/scaffold/src/{{PYTHON_PACKAGE_NAME}}/worker/: main.py
assets/templates/scaffold/tests/e2e/: test_cli_smoke.py
assets/templates/scaffold/tests/integration/: test_file_task_store.py
assets/templates/scaffold/tests/unit/: test_task_service.py
references/: doc-baseline.md  doc-quality-loop.md  environment-blockers.md  expansion-mode.md  feature-slicing.md  harness-engineering.md  interview-checklist.md  operator-logging.md  python-cli-uv-preset.md  runtime-startup.md
scripts/: companion_skills.py  finalize_bootstrap_state.py  install_ralph.py  install_scaffold.py  render_docs.py  template_utils.py
tests/: test_companion_skills.py  test_cycle_truth_contract.py  test_install_ralph.py  test_install_scaffold.py  test_manual_promotion.py  test_promotion_evidence.py  test_render_docs.py  test_repeated_blocker_rca_flow.py  test_stall_triage_contract.py
(+40 files in other folders)
